Bug #122351 --> if the shell doesn't support wide string friendly versions of Shell_NotifyW, then gracefully fall back and use the older ASCII versions (Shell_Notify). r=bhuvan sr=sspitzer